Initial commit: materialililil v0.1.0
PBR texture map generator — turn any image into production-ready texture maps.
Runs entirely on your machine. No uploads, no accounts, no servers.

Features:
- 13 PBR map types (height, normal, diffuse, AO, roughness, metallic, etc.)
- Real-time 3D preview (Three.js / React Three Fiber)
- 12 built-in material presets
- ZIP export with engine-specific naming
- Electron desktop app with auto-updates via GitHub Releases
- Full keyboard shortcuts, undo/redo, project save/load
- Privacy-first: all processing local, no data collection

Legal:
- MIT License
- GDPR-compliant Privacy Policy
- Terms of Service with versioned update mechanism
- Complete third-party license attributions
- Security policy and contribution guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,16 @@
 # production
 /build
 
+# electron-builder output
+/dist/
+*.dmg
+*.exe
+*.AppImage
+*.deb
+*.rpm
+*.snap
+*.msi
+
 # misc
 .DS_Store
 *.pem
