fix: auto-publish releases instead of drafts
Set releaseType to 'release' in electron-builder config so GitHub releases are immediately available for download

--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "publish": {
       "provider": "github",
       "owner": "dev-doshi",
-      "repo": "materialililil"
+      "repo": "materialililil",
+      "releaseType": "release"
     },
     "mac": {
       "category": "public.app-category.graphics-design",
