fix: include node_modules in packaged app and add CSP
- Remove node_modules exclusion from files array that was stripping all
  runtime dependencies (electron-serve, electron-updater) from build
- electron-builder auto-includes production deps by default
- Add Content-Security-Policy header to fix Electron security warning

--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     },
     "files": [
       "electron/**/*",
-      "out/**/*",
-      "!node_modules/**/*"
+      "out/**/*"
     ],
     "extraResources": [
       {
