fix: auto-publish releases after all builds complete

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,3 +135,12 @@ jobs:
             --clobber
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Publish release (remove draft status)
+        run: gh release edit "${GITHUB_REF_NAME}" --repo "${{ github.repository }}" --draft=false
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
